--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,23 @@
           <artifactId>jackson-annotations</artifactId>
           <version>2.9.0</version>
       </dependency>
+
+      <!--配置日志相关,日志门面使用slf4j,日志的具体实现由logback实现-->
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <version>1.1.7</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.21</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.6.1</version>
+      </dependency>
   </dependencies>
 
   <build>
