--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>2.4.2</version>
+      <version>2.9.0</version>
     </dependency>
     <dependency>
       <groupId>com.github.pagehelper</groupId>
@@ -169,7 +169,11 @@
           <artifactId>jackson-annotations</artifactId>
           <version>2.9.0</version>
       </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.5.3</version>
+    </dependency>
       <!--配置日志相关,日志门面使用slf4j,日志的具体实现由logback实现-->
       <dependency>
           <groupId>ch.qos.logback</groupId>
