--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,5 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/bioglan?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=masterLHC108!
+jdbc.timeBetweenEvictionRunsMillis=3600000
+jdbc.minEvictableIdleTimeMillis=3600000
